--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
     <footer class="footer">
         <h3 class="footer__info">© 2023 Mesto Russia</h3>
     </footer>
-    <section class="popup"></section>
+    <section class="popup">
+        <div class="popup__container">
+            <h2 class="popup__edit-profile">Редактировать профиль</h2>
+            <div class="popup__form">
+                <input class="popup__name" type="text" placeholder="Имя"> 
+                <input class="popup__profession" type="text" placeholder="Профессия">
+                <button class="popup__button-save" type="button">Сохранить</button>
+            </div>
+            <button class="popup__button-close" type="button"></button>
+        </div>
+        
+    </section>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
