--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         <section class="popup">
             <div class="popup__container">
                 <h2 class="popup__edit-profile">Редактировать профиль</h2>
-                <div class="popup__form">
+                <form class="popup__form">
                     <input class="popup__name" type="text" placeholder="Имя" />
                     <input class="popup__profession" type="text" placeholder="Профессия" />
-                    <button class="popup__button-save" type="button">Сохранить</button>
-                </div>
+                    <button class="popup__button-save" type="submit">Сохранить</button>
+                </form>
                 <button class="popup__button-close" type="button"></button>
             </div>
         </section>
