--- a/index.html
+++ b/index.html
@@ -28,60 +28,62 @@
                     <img class="element__image" src="./images/Novorossiysk.jpg" alt="Новороссийск" />
                     <div class="element__block">
                         <h2 class="element__name">Новороссийск</h2>
-                        <button class="element__button-like"></button>
+                        <button class="element__button-like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img class="element__image" src="./images/Orenburg.jpg" alt="Оренбург" />
                     <div class="element__block">
                         <h2 class="element__name">Оренбург</h2>
-                        <button class="element__button-like"></button>
+                        <button class="element__button-like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img class="element__image" src="./images/samara.jpg" alt="Самара" />
                     <div class="element__block">
                         <h2 class="element__name">Самара</h2>
-                        <button class="element__button-like"></button>
+                        <button class="element__button-like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img class="element__image" src="./images/UFA.jpeg" alt="Уфа" />
                     <div class="element__block">
                         <h2 class="element__name">Уфа</h2>
-                        <button class="element__button-like"></button>
+                        <button class="element__button-like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img class="element__image" src="./images/Gelendjik.jpg" alt="Геленджик" />
                     <div class="element__block">
                         <h2 class="element__name">Геленджик</h2>
-                        <button class="element__button-like"></button>
+                        <button class="element__button-like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img class="element__image" src="./images/Moscow.jpg" alt="Москва" />
                     <div class="element__block">
                         <h2 class="element__name">Москва</h2>
-                        <button class="element__button-like"></button>
+                        <button class="element__button-like" type="button"></button>
                     </div>
                 </div>
             </section>
         </main>
         <footer class="footer">
-            <h3 class="footer__info">© 2023 Mesto Russia</h3>
+            <p class="footer__info">© 2023 Mesto Russia</p>
         </footer>
-        <section class="popup">
+        <div class="popup">
             <div class="popup__container">
                 <h2 class="popup__edit-profile">Редактировать профиль</h2>
-                <form class="popup__form">
-                    <input class="popup__name" type="text" placeholder="Имя" />
-                    <input class="popup__profession" type="text" placeholder="Профессия" />
+                <form class="popup__form" name="editPopupForm">
+                    <div class="popup__input-block">
+                        <input class="popup__input popup__input_name" type="text" name="elementPopupInputName" placeholder="Имя" />
+                        <input class="popup__input popup__input_profession" type="text" name="elementPopupInputProfession" placeholder="Профессия" />
+                    </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__button-close" type="button"></button>
             </div>
-        </section>
+        </div>
         <script src="./scripts/index.js"></script>
     </body>
 </html>
