Исправления после второго ревью

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <div class="popup__container">
                 <h2 class="popup__edit-profile">Редактировать профиль</h2>
                 <form class="popup__form" name="editPopupForm">
-                    <div class="popup__input-block">
-                        <input class="popup__input popup__input_name" type="text" name="elementPopupInputName" placeholder="Имя" />
-                        <input class="popup__input popup__input_profession" type="text" name="elementPopupInputProfession" placeholder="Профессия" />
-                    </div>
+                    <fieldset class="popup__input-block">
+                        <input class="popup__input popup__input_type_name" type="text" name="elementPopupInputName" placeholder="Имя" />
+                        <input class="popup__input popup__input_type_profession" type="text" name="elementPopupInputProfession" placeholder="Профессия" />
+                    </fieldset>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__button-close" type="button"></button>
