--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="popup popup_type_image">
-            <div class="popup__container-image">
+            <div class="popup__container-images">
                 <img class="popup__image" src="" alt="">
                 <button class="popup__button-close" type="button"></button>
             </div>
