--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="popup popup_type_image">
             <div class="popup__container-images">
-                <img class="popup__image" src="" alt="" />
+                <img class="popup__image" src="#" alt="" />
                 <h2 class="popup__image-name"></h2>
                 <button class="popup__button-close" type="button"></button>
             </div>
@@ -64,7 +64,7 @@
 
         <template id="elements">
             <div class="element">
-                <img class="element__image" src="" alt="" />
+                <img class="element__image" src="#" alt="" />
                 <div class="element__block">
                     <h2 class="element__name"></h2>
                     <button class="element__button-like" type="button"></button>
