Добавление карточек, зум картинок. Отправка на ревью

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </fieldset>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
-                <button class="popup__button-close popup_type_add-btn-close" type="button"></button>
+                <button class="popup__button-close popup_type_close" type="button"></button>
             </div>
         </div>
         <div class="popup popup_type_image">
