--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <div class="popup__container">
                 <form class="popup__form popup__form_add" name="addPopupForm">
                     <h2 class="popup__edit-profile">Новое место</h2>
-                    <fieldset class="popup__input-block">
+                    <div class="popup__input-block">
                         <input class="popup__input popup__input_type_place" type="text" name="elementPopupInputPlace" placeholder="Название" />
                         <input class="popup__input popup__input_type_link" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" />
-                    </fieldset>
+                    </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__button-close popup__close" type="button"></button>
@@ -72,6 +72,7 @@
                 <button class="element__button-delete" type="button"></button>
             </div>
         </template>
+        <script src="./scripts/cards.js"></script>
         <script src="./scripts/index.js"></script>
     </body>
 </html>
