--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="popup__container">
                 <form class="popup__form" name="editPopupForm">
                     <h2 class="popup__edit-profile">Редактировать профиль</h2>
-                    <fieldset class="popup__input-block">
+                    <div class="popup__input-block">
                         <input class="popup__input popup__input_type_name" type="text" name="elementPopupInputName" placeholder="Имя" />
                         <input class="popup__input popup__input_type_profession" type="text" name="elementPopupInputProfession" placeholder="Профессия" />
-                    </fieldset>
+                    </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__button-close" type="button"></button>
