--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         </footer>
         <div class="popup popup_type_edit">
             <div class="popup__container">
-                <form class="popup__form" name="editPopupForm">
+                <form class="popup__form" name="editPopupForm" >
                     <h2 class="popup__edit-profile">Редактировать профиль</h2>
                     <div class="popup__input-block">
-                        <input class="popup__input popup__input_type_name" type="text" name="elementPopupInputName" placeholder="Имя" />
-                        <input class="popup__input popup__input_type_profession" type="text" name="elementPopupInputProfession" placeholder="Профессия" />
+                        <input class="popup__input popup__input_type_name" id="inputName" type="text" name="elementPopupInputName" placeholder="Имя" minlength="2" maxlength="40" required />
+                        <span class="popup__error popup__input_type_error inputName-inputError"></span>
+                        <input class="popup__input popup__input_type_profession" id="inputProfession" type="text" name="elementPopupInputProfession" placeholder="Профессия" minlength="2" maxlength="200" required/>
+                        <span class="popup__error popup__input_type_error inputProfession-inputError"></span>
                     </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
@@ -43,11 +45,13 @@
         </div>
         <div class="popup popup_type_add">
             <div class="popup__container">
-                <form class="popup__form popup__form_add" name="addPopupForm">
+                <form class="popup__form popup__form_add" name="addPopupForm" novalidate>
                     <h2 class="popup__edit-profile">Новое место</h2>
                     <div class="popup__input-block">
-                        <input class="popup__input popup__input_type_place" type="text" name="elementPopupInputPlace" placeholder="Название" />
-                        <input class="popup__input popup__input_type_link" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" />
+                        <input class="popup__input popup__input_type_place" id="inputPlace" type="text" name="elementPopupInputPlace" placeholder="Название" minlength="2" maxlength="30" required />
+                        <span class="popup__error popup__input_type_error inputPlace-inputError"></span>
+                        <input class="popup__input popup__input_type_link" id="inputLink" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" required/>
+                        <span class="popup__error popup__input_type_error inputLink-inputError"></span>
                     </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
@@ -73,6 +77,7 @@
             </div>
         </template>
         <script src="./scripts/cards.js"></script>
+        <script src="./scripts/validate.js"></script>
         <script src="./scripts/index.js"></script>
     </body>
 </html>
