Реализована валидация форм, доработан функционал закрытия попапов

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </footer>
         <div class="popup popup_type_edit">
             <div class="popup__container">
-                <form class="popup__form" name="editPopupForm" >
+                <form class="popup__form" name="editPopupForm">
                     <h2 class="popup__edit-profile">Редактировать профиль</h2>
                     <div class="popup__input-block">
                         <input class="popup__input popup__input_type_name" id="inputName" type="text" name="elementPopupInputName" placeholder="Имя" minlength="2" maxlength="40" required />
-                        <span class="popup__error popup__input_type_error inputName-inputError"></span>
-                        <input class="popup__input popup__input_type_profession" id="inputProfession" type="text" name="elementPopupInputProfession" placeholder="Профессия" minlength="2" maxlength="200" required/>
-                        <span class="popup__error popup__input_type_error inputProfession-inputError"></span>
+                        <span class="popup__error popup__input_type-error inputName-inputError"></span>
+                        <input class="popup__input popup__input_type_profession" id="inputProfession" type="text" name="elementPopupInputProfession" placeholder="Профессия" minlength="2" maxlength="200" required />
+                        <span class="popup__error popup__input_type-error inputProfession-inputError"></span>
                     </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
@@ -49,9 +49,9 @@
                     <h2 class="popup__edit-profile">Новое место</h2>
                     <div class="popup__input-block">
                         <input class="popup__input popup__input_type_place" id="inputPlace" type="text" name="elementPopupInputPlace" placeholder="Название" minlength="2" maxlength="30" required />
-                        <span class="popup__error popup__input_type_error inputPlace-inputError"></span>
-                        <input class="popup__input popup__input_type_link" id="inputLink" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" required/>
-                        <span class="popup__error popup__input_type_error inputLink-inputError"></span>
+                        <span class="popup__error popup__input_type-error inputPlace-inputError"></span>
+                        <input class="popup__input popup__input_type_link" id="inputLink" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" required />
+                        <span class="popup__error popup__input_type-error inputLink-inputError"></span>
                     </div>
                     <button class="popup__button-save" type="submit">Сохранить</button>
                 </form>
