--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </footer>
         <div class="popup popup_type_edit">
             <div class="popup__container">
-                <form class="popup__form" name="editPopupForm">
+                <form class="popup__form" name="editPopupForm" id="editForm">
                     <h2 class="popup__edit-profile">Редактировать профиль</h2>
                     <div class="popup__input-block">
                         <input class="popup__input popup__input_type_name" id="inputName" type="text" name="elementPopupInputName" placeholder="Имя" minlength="2" maxlength="40" required />
@@ -53,7 +53,7 @@
                         <input class="popup__input popup__input_type_link" id="inputLink" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" required />
                         <span class="popup__error popup__input-error inputLink-inputError"></span>
                     </div>
-                    <button class="popup__button-save" type="submit">Сохранить</button>
+                    <button class="popup__button-save" type="submit" id="saveBtn">Сохранить</button>
                 </form>
                 <button class="popup__button-close popup__close" type="button"></button>
             </div>
