--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         </footer>
         <div class="popup popup_type_edit">
             <div class="popup__container">
+                <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="editPopupForm" id="editForm">
-                    <h2 class="popup__edit-profile">Редактировать профиль</h2>
                     <div class="popup__input-block">
                         <input class="popup__input popup__input_type_name" id="inputName" type="text" name="elementPopupInputName" placeholder="Имя" minlength="2" maxlength="40" required />
                         <span class="popup__error popup__input-error inputName-inputError"></span>
+                    </div>
+                    <div class="popup__input-block">
                         <input class="popup__input popup__input_type_profession" id="inputProfession" type="text" name="elementPopupInputProfession" placeholder="Профессия" minlength="2" maxlength="200" required />
                         <span class="popup__error popup__input-error inputProfession-inputError"></span>
                     </div>
@@ -45,11 +47,13 @@
         </div>
         <div class="popup popup_type_add">
             <div class="popup__container">
+                <h2 class="popup__title">Новое место</h2>
                 <form class="popup__form popup__form_add" name="addPopupForm" novalidate>
-                    <h2 class="popup__edit-profile">Новое место</h2>
                     <div class="popup__input-block">
                         <input class="popup__input popup__input_type_place" id="inputPlace" type="text" name="elementPopupInputPlace" placeholder="Название" minlength="2" maxlength="30" required />
                         <span class="popup__error popup__input-error inputPlace-inputError"></span>
+                    </div>
+                    <div class="popup__input-block"> 
                         <input class="popup__input popup__input_type_link" id="inputLink" type="url" name="elementPopupInputLink" placeholder="Ссылка на картинку" required />
                         <span class="popup__error popup__input-error inputLink-inputError"></span>
                     </div>
