правки после ревью 1

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="popup popup_type_add">
             <div class="popup__container">
                 <h2 class="popup__title">Новое место</h2>
-                <form class="popup__form popup__form_add" name="addPopupForm" novalidate>
+                <form class="popup__form popup__form_add" name="addPopupForm" id="createForm" novalidate>
                     <div class="popup__input-block">
                         <input class="popup__input popup__input_type_place" id="inputPlace" type="text" name="elementPopupInputPlace" placeholder="Название" minlength="2" maxlength="30" required />
                         <span class="popup__error popup__input-error inputPlace-inputError"></span>
