--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./pages/index.css" />
         <title>Mesto.Russia 2023</title>
     </head>
     <body class="page">
         <header class="header">
-            <img class="header__logo" src="./images/logo.svg" alt="Mesto логотип" />
+            <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Mesto логотип" />
         </header>
         <main class="content">
             <section class="profile">
-                <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар пользователя" />
+                <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар пользователя" />
                 <div class="profile__info">
                     <div class="profile__block">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -80,6 +79,5 @@
                 <button class="element__button-delete" type="button"></button>
             </div>
         </template>
-        <script type="module" src="./scripts/index.js"></script>
     </body>
 </html>
